# Causal-Microbiome-Omics

./: .gitignore  README.md  pyproject.toml
data/: toy_microbiome_metabolite_outcome.csv
docs/: 01_core_concepts_dags_backdoor.md  02_mediation_acme_ade_total.md  03_double_machine_learning_dml.md
python/: 01_toy_data.py  02_dml_example.py
r/: 01_toy_data.R  02_mediation_mediation_pkg.R
scripts/: uv_env.sh
