[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-microbiome-omics"
version = "0.1.0"
description = "Educational toy repo for causal-ish reasoning in multi-omics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "doubleml",
  "scikit-learn",
]

[tool.setuptools]
packages = []
